sandbox/output
StringCalculatorTest.java:22: error: method two_string_get_x_add_y() is already defined in class StringCalculatorTest
    public void two_string_get_x_add_y() {
                ^
1 error
